--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-5 pt-5">
-                    <img id= "sobreNosotros"class="img-fluid" src="" alt="">
+                    <img id= "sobreNosotros"class="img-fluid" src="img/gente-negocios-trabajando-equipo-oficina.jpg" alt="">
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
                     <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Te brindamos una asesoría integral</h6>
